# server

./: .gitignore  CMakeLists.txt  README.md  README.txt
inc/: includes.h  my_client.h  my_server.h
src/: client.c  my_client.c  my_server.c  server.c
